# flir_boson_usb

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  nodelet_plugins.xml  package.xml
.circleci/: config.yml
example_calibrations/: Boson640.yaml  Boson_640.yaml
include/flir_boson_usb/: BosonCamera.h
launch/: flir_boson.launch  flir_boson.launch.xml  flir_boson_rectified.launch
src/: BosonCamera.cpp  flir_boson_usb_node.cpp
src/nodelets/: BosonCamera.cpp
